--- a/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -52,74 +52,74 @@ BEL_welfare_state:0 "복지 국가의 기초"
 BEL_welfare_state_desc:0 "독일 정부가 확대한 사회 불평등 갭을 줄이기 위해 BWP는 복지 국가의 기초가 사회적 지위에 관계없이 모든 시민을 지지하고 지원할 것을 촉구했습니다."
 BEL_The_Lion:0 "벨기에 열정"
 BEL_The_Lion_desc:0 "최근 개혁과 경제 성장의 성공에 힘입어 벨기에 인구는 다시 한번 세계대전의 열정을 발견하여 세계 정상에 올랐습니다. 유럽의 또 다른 위기의 서막에서 언어의 경계를 가로지르는 단결이 강화되며 모든 시민들은 전쟁이 그 땅에 오게 될 경우 벨기에의 주권을 유지할 준비를 하고 있습니다."
-BEL_Secretaries:0 "Economic Secretaries"
-BEL_Secretaries_desc:0 "As the first step in Plan De Man, the creation of secretaries controlled by technocrats were tasked with fighting unemployment and countering national populist propaganda."
-BEL_Civilian:0 "Civilian Focus"
-BEL_Civilian_desc:0 "Our civilian industrial sector has received heavy hits by Black Monday but is finally starting to recover through government funds and enthusiastic entrepreneurs."
-BEL_Corporations:0 "Corporation Focus"
-BEL_Corporations_desc:0 "To guarantee the prosperity of the small businesses throughout our nation (especially in Flanders), large companies suffered under increasingly severe legislation and raised taxes. The Liberal Party has abolished many of these laws and enabled large corporations to prosper once more."
-BEL_Ministries:0 "Centralised Ministries"
-BEL_Ministries_desc:0 "A large and convoluted political system has dragged us down and plagued us ever since the turn of the century. Through sweeping reforms, the BWP is overturning the old legislation and streamline the Government structures."
-BEL_Decreased_Control:0 "Laissez-Faire Attitude"
-BEL_Decreased_Control_desc:0 "The government has no business interfering with the Free Market and a policy of Laissez-Faire will prevent obstruction of our economic growth."
-BEL_More_Soldiers:0 "Increased Conscription"
-BEL_More_Soldiers_desc:0 "The Flemish-Wallonian resistance has proven fierce but we still need to man the border. France is remilitarizing and without soldiers, we'll fall even quicker than during the Weltkrieg."
-BEL_belgicism:0 "Belgicism"
-BEL_belgicism_desc:0 "Belgicism is a policy proposed by the Catholic parties to unify the country and decrease provincial government. It tries to bridge the language barrier and is based on a unified Belgium led by its king but comes at a high maintenance cost."
+BEL_Secretaries:0 "경제 장관"
+BEL_Secretaries_desc:0 "드 맨 계획의 첫 단계로써, 기술 관료들에 의해 통제되는 장관들의 창설은 실업과 싸우고 국가적 대중 영합주의 선전에 대응하는 임무를 맡았습니다."
+BEL_Civilian:0 "민간 중점"
+BEL_Civilian_desc:0 "우리의 민간 산업 부문은 검은 월요일에 의해 큰 타격을 입었지만 마침내 정부 기금과 열정적인 기업가를 통해 회복하기 시작했습니다."
+BEL_Corporations:0 "기업 중점"
+BEL_Corporations_desc:0 "우리 나라 전체에 걸쳐(특히 플랑드르) 중소 기업의 번영을 보장하기 위해 대기업들은 갈수록 엄격해 지는 입법과 세금 인상을 겪었습니다. 자유당은 이러한 법들 중 많은 부분을 폐지하고 대기업들이 다시 한번 번영할 수 있도록 했습니다."
+BEL_Ministries:0 "중앙 부처"
+BEL_Ministries_desc:0 "거대하고 복잡한 정치 체제는 우리를 끌어내렸고 세기가 바뀐 이래로 우리를 괴롭혀 왔습니다. 전면적인 개혁을 통해, BWP는 낡은 법률을 뒤집고 정부 구조를 간소화하고 있습니다."
+BEL_Decreased_Control:0 "자유 방임 태도"
+BEL_Decreased_Control_desc:0 "정부는 자유 시장에 간섭하지 않으며 자유 방임 정책은 경제 성장의 방해를 막을 것입니다."
+BEL_More_Soldiers:0 "증가된 징병제"
+BEL_More_Soldiers_desc:0 "플랑드르-왈로니아의 저항은 격렬한 것으로 증명되었지만 우리는 여전히 국경을 넘어야 한니다. 프랑스는 재군사화되어 있고, 우리는 군인들이 없다면 세계대전 때보다 훨씬 더 빨리 추락할 것입니다."
+BEL_belgicism:0 "벨기에주의"
+BEL_belgicism_desc:0 "벨기에주의는 카톨릭 정당이 국가를 통일하고 지방 정부를 줄이기 위해 제안한 정책입니다. 그것은 언어 장벽을 허물것이고 왕이 이끄는 통일된 벨기에를 기반으로 하지만 높은 유지비가 들 것입니다."
 BEL_Farmers_aid:0 "농가 지원"
-BEL_Farmers_aid_desc:0 "Farmers throughout the Flemish countryside have suffered fiercely in the aftermath of Black Monday. With many smaller farms only barely keeping their head above water, intervention by the State was sorely needed and has reduced the amount of manpower necessary to keep the farms maintenaned."
+BEL_Farmers_aid_desc:0 "플랑드르 지방의 농부들은 검은 월요일의 여파로 극심한 고통을 겪었습니다. 많은 소규모 농장들이 간신히 연명하고 있기 때문에, 국가의 개입이 절실히 필요했고 농장을 관리하는 데 필요한 인력을 감축시켰습니다."
 BEL_Nationalise_Basic:0 "기반 산업 국유화"
-BEL_Nationalise_Basic_desc:0 "Through nationalisation and government control of the basic industries, the Belgian government and the BWP increase their influence over the national economy allowing for better crisis management and pro-Belgian trade agreements."
-BEL_Repairing_Damage:0 "Flemish Reconstruction Effort"
-BEL_Repairing_Damage_desc:0 "Due to heavy fighting in the urban environments of Flanders and the damage caused by Flemish terrorist attacks, large swaths of industrial terrain in the Harbours of Antwerpen, Ghent and Zeebrugge are awaiting reconstruction funds."
-BEL_Language_Trouble_FO:0 "언어 문제가 부분적으로 해결됨"
-BEL_Language_Trouble_FO_desc:0 "In an effort to secure the loyalty of the Flemish and strengthen our grip over the region, Flemish citizens are now allowed limited autonomy."
-BEL_Language_Trouble_WO:0 "언어 문제가 부분적으로 해결됨"
-BEL_Language_Trouble_WO_desc:0 "By allowing both the Flemish and Walloon region limited autonomy and splitting the army in Walloon and Flemish divisions, we can avoid the linguistic issues that plagued us in the Weltkrieg."
+BEL_Nationalise_Basic_desc:0 "벨기에 정부와 BWP는 기본 산업에 대한 국유화와 정부의 통제를 통해 국가 경제에 대한 영향력을 높이고 보다 나은 위기 관리 및 벨기에 전통 무역 협정을 허용합니다."
+BEL_Repairing_Damage:0 "플랑드르 재건 노력"
+BEL_Repairing_Damage_desc:0 "플랑드르의 도시 환경과의 격렬한 싸움과 플랑드르에서의 테러 공격으로 인한 피해 때문에 엔트워프 항구, 헨트 및 제브류헤 항구의 산업 지형이 광범위하게 재건 자금을 기다리고 있습니다."
+BEL_Language_Trouble_FO:0 "언어 문제가 부분적으로 해결되다"
+BEL_Language_Trouble_FO_desc:0 "플랑드르의 충성도를 확보하고 그 지역을 장악하려는 노력의 일환으로 플랑드르 시민들은 제한된 자치권을 받을 수 있습니다."
+BEL_Language_Trouble_WO:0 "언어 문제가 부분적으로 해결되다"
+BEL_Language_Trouble_WO_desc:0 "플랑드르와 왈로니아 지역의 제한된 자치권과 왈로니아와 플랑드르 지역에서 군대 분할을 허용함으로써 우리는 웰세계대전때 우리를 괴롭히던 언어 문제를 피할 수 있습니다."
 BEL_Risk_Famine:0 "기근 위험"
-BEL_Risk_Famine_desc:0 "Due to exporting a large portion of our already limited food supplies to assist the German Empire, food shortages are to be expected come winter."
+BEL_Risk_Famine_desc:0 "이미 제한된 식량 공급품의 상당 부분이 독일 제국을 지원하기 위해 수출되기 때문에 올 겨울에는 식량 부족이 올 것으로 예상됩니다."
 BEL_Risk_Famine_small:0 "작은 기근 위험"
-BEL_Risk_Famine_small_desc:0 "Due to exporting a large portion of our already limited food supplies to assist the German Empire, food shortages are to be expected come winter."
+BEL_Risk_Famine_small_desc:0 "이미 제한된 식량 공급품의 상당 부분이 독일 제국을 지원하기 위해 수출되기 때문에 올 겨울에는 식량 부족이 올 것으로 예상됩니다."
 BEL_Well_Fed:0 "풍년"
-BEL_Well_Fed_desc:0 "Because of the bountiful harvest and large government prevention programs we will easily get through the harsh winter."
+BEL_Well_Fed_desc:0 "풍성한 수확과 대규모 정부 예방 프로그램 덕분에 우리는 추운 겨울을 쉽게 넘길 수 있을 것입니다."
 BEL_Tax:0 "독일의 긴급 과세"
-BEL_Tax_desc:0 "To help German recovery, the Kaiser has imposed new taxation on the rich lands of Flanders-Wallonia hampering our own recovery"
+BEL_Tax_desc:0 "독일인들의 회복을 돕기 위해 카이저는 플랑드르-왈로니아의 풍부한 땅에 새로운 세금을 부과했습니다."
 BEL_Tax_small:0 "약간의 독일의 과세"
-BEL_Tax_small_desc:0 "To help German recovery, the Kaiser has imposed new taxation on the rich lands of Flanders-Wallonia hampering our own recovery"
+BEL_Tax_small_desc:0 "독일인들의 회복을 돕기 위해 카이저는 플랑드르-왈로니아의 풍부한 땅에 새로운 세금을 부과했습니다."
 BEL_Bad_Deal:0 "친독 무역 협정"
 BEL_Good_Deal:0 "친플란데런-발로니엔 무역 협정"
 BEL_Schelle_Power:0 "셸러 발전소"
-BEL_Schelle_Power_desc:0 "Built to sustain the large power demands of our country, the Schelle Power Plant is the largest on the continent and will surely aid in the further expansion of our industry."
+BEL_Schelle_Power_desc:0 "우리나라의 막대한 전력 수요를 유지하기 위해 건설된 셸러 발전소는 대륙에서 가장 규모가 크며 우리 산업의 발전에 도움이 될 것입니다."
 BEL_Cement_Export:0 "시멘트 수출"
-BEL_Cement_Export_desc:0 "Due to the Black Monday crisis, many governments of the Reichspakt have decided to fund large construction projects to kick start their recovery. We are gladly profiting from this by expanding our cement export and thus helping our own economy back on track until the large petrochemical, steel and textile industries have recovered."
-BEL_Abolish_Flemish_Council_idea:0 "Abolished Flemish Council"
-BEL_Abolish_Flemish_Council_idea_desc:0 "In an effort to centralise power around the monarch and his closest advisers, the Government has abolished the Flemish Council."
-BEL_Flemish_Council_desc:0 "To align the Flemish population behind Adalbert, he has guaranteed and restored their old priviliges allowing for more decisive excutive power on a local scale."
-BEL_Flemish_Council:0 "Priviliges for the Flemish Council"
+BEL_Cement_Export_desc:0 "검은 월요일 위기로 인해 제국 협정의 많은 정부는 복구를 시작하기 위해 대규모 건설 프로젝트에 자금을 지원하기로 결정했습니다. 우리는 시멘트 수출을 확대함으로써 큰 석유 화학, 철강 및 섬유 산업이 회복 될 때까지 우리 경제를 다시 도울 수 있게 도와줌으로써 기꺼이 이익을 얻고 있습니다."
+BEL_Abolish_Flemish_Council_idea:0 "플랑드르 의회 폐지"
+BEL_Abolish_Flemish_Council_idea_desc:0 "군주와 그의 측근 보좌관들을 중심으로 권력을 분산시키려는 노력의 일환으로, 정부는 플랑드르 의회를 폐지했습니다."
+BEL_Flemish_Council_desc:0 "아달베르트의 뒤에 플랑드르 주민들을 정렬시키기 위해, 그는 지역 특권층에게 보다 결정적인 집행 권한을 허용하는 옛 권한을 보장하고 복원했습니다."
+BEL_Flemish_Council:0 "플랑드르 의회의 특권"
 BEL_Create_VRT:0 "NIR"
-BEL_Create_VRT_desc:0 "The NIR will from now on only transmit radio and television programs curated by a panel of German and Government advisers."
+BEL_Create_VRT_desc:0 "NIR은 이제부터 독일과 정부 자문 위원단에 의해 관리되는 라디오와 텔레비전 프로그램만을 송신할 것입니다."
 BEL_Taxation:0 "세금 인상"
-BEL_Taxation_desc:0 "By temporarily raising taxes, the Government is able to gather the funds required for its sweeping reforms."
-BEL_State_Funded_Research:0 "State Funded Research"
+BEL_Taxation_desc:0 "일시적으로 세금을 인상함으로써 정부는 개혁을 위해 필요한 자금을 모을 수 있습니다."
+BEL_State_Funded_Research:0 "국가 연구 자금 지원"
 BEL_Lib_Science:0 "자유 연구 기금"
 BEL_Cat_Science:0 "가톨릭 교육 개혁"
-BEL_Economic_Regions:0 "Economic regions"
-BEL_Economic_Regions_desc:0 "To further boost our industrial capacity, the Government has chosen to create a system of economic regions. This means that the regions of Flanders and Wallonia can independently pass regulations and laws to further benefit their region and quickly respond to local crises."
-BEL_Last_Stand:0 "Our last stand"
-BEL_Last_Stand_desc:0 "We were unable to deter an enemy attack and therefore must now throw everything we got at the enemy to preserve Belgian independence."
-BEL_export_focus3:0 "Belgian Arms Programme"
-BEL_export_focus3_desc:0 "Due to our neutral position we are able to benefit fully from the increased importance of the arms trade. Exporting weapons to revolutions everywhere in the world and conflicts in Europe has made us rich and skilled."
+BEL_Economic_Regions:0 "경제 지역"
+BEL_Economic_Regions_desc:0 "정부는 산업 역량을 더욱 강화하기 위해 경제 지역 시스템을 구축하기로 결정했습니다. 이는 플랑드르와 왈로니아 지역을 독자적으로 더 많은 혜택을 주고 지역 위기에 신속하게 대응할 수 있도록 규제와 법률을 통과시킬 수 있음을 의미합니다."
+BEL_Last_Stand:0 "우리의 최후의 저항"
+BEL_Last_Stand_desc:0 "우리는 적의 공격을 막을 수 없었으므로, 이제 벨기에의 독립을 지키기 위해서는 우리가 가진 모든것을 적에게 던져야 합니다."
+BEL_export_focus3:0 "벨기에 무기 프로그램"
+BEL_export_focus3_desc:0 "우리의 중립적 지위 덕분에 우리는 무기 거래의 중요성이 증가함에 따라 충분히 이익을 얻을 수 있습니다. 세계 곳곳의 혁명과 유럽의 분쟁에 무기를 수출하는 것은 우리를 부유하고 숙련되게 만들었습니다."
 BEL_Reparations:0 "독일 제국에 배상"
-BEL_Refugee_Program:0 "Refugee Programme"
+BEL_Refugee_Program:0 "난민 프로그램"
 BEL_LTank_Production:0 "경전차에 집중"
 BEL_MTank_Production:0 "중전차에 집중"
-BEL_Shipping_Dependence:0 "German Shipping Dependence"
-BEL_Diamant_Sector:0 "Diamond Sector"
-BEL_Solvay_Institute_idea:0 "Solvay Institute"
-BEL_Antwerp_Harbor_Blockaded:0 "Antwerp Harbour Blockaded"
-BEL_German_Officers:0 "German Officers"
-BEL_Local_Officers:0 "Local Officers"
-BEL_Solvay_Institute2:0 "Solvay Institute"
+BEL_Shipping_Dependence:0 "독일 선박 의존성"
+BEL_Diamant_Sector:0 "다이아몬드 부문"
+BEL_Solvay_Institute_idea:0 "솔베이 연구소"
+BEL_Antwerp_Harbor_Blockaded:0 "엔트워프 항구 봉쇄"
+BEL_German_Officers:0 "독일 장교들"
+BEL_Local_Officers:0 "지역 장교들"
+BEL_Solvay_Institute2:0 "솔베이 연구소"
 BEL_Small_Strike:0 "파업"
 BEL_Royal_Naval_Academy:0 "왕립 해군 학교"
 BEL_Naval_Program2_idea:0 "해군 계획 확장"
@@ -127,14 +127,14 @@ BEL_Naval_Program_idea:0 "해군에 대규모 투자"
 BEL_idea_bicycle_army:0 "자전거 부대"
 BEL_T13_Production:0 "T-13 LTD 계획"
 BEL_Anti_Tank_Production:0 "대전차 계획"
-BEL_Air_Defence_Of_Territory:0 "Air Defence of the Territory"
+BEL_Air_Defence_Of_Territory:0 "지역 방공"
 BEL_Exempt_Walloons:0 "헌병대 확장"
 BEL_Feldgendarmerie:0 "헌병대 확장"
 BEL_Vlaamse_Wacht:0 "플랑드르 경비대 확장"
 
 ### Focus Trees ###
 
-BEL_Independent_focus:0 "Independent Belgium"
+BEL_Independent_focus:0 "벨기에 독립"
 
 ### Focuses ###
 BEL_Evaluate_State_Budget:0 "Evaluate State Budget"
