--- a/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -137,56 +137,56 @@ BEL_Vlaamse_Wacht:0 "플랑드르 경비대 확장"
 BEL_Independent_focus:0 "벨기에 독립"
 
 ### Focuses ###
-BEL_Evaluate_State_Budget:0 "Evaluate State Budget"
-BEL_Evaluate_State_Budget_desc:0 "At the end of every year, the State budget is evaluated by members of the Flemish Council and their findings and proposals are then proposed to Parliament which decides then with permission of the king which expenses need to be cut."
+BEL_Evaluate_State_Budget:0 "국가 예산 평가"
+BEL_Evaluate_State_Budget_desc:0 "매년 말에 국가 예산은 플랑드르 의회 위원들에 의해 평가되며, 그 결과와 의안은 의회에 제출되어 국왕의 허락을 받고 결정됩니다."
 BEL_German_Investigation:0 "독일의 투자"
-BEL_German_Investigation_desc:0 "The only way to root out corruption and destroy any elements of the resistance is by enlisting foreign aid."
+BEL_German_Investigation_desc:0 "부패를 뿌리뽑고 저항 세력을 파괴할 수 있는 유일한 방법은 해외 원조를 받는 것입니다."
 BEL_Investigate_Political_Schandal:0 "정치 스캔 조사"
-BEL_Investigate_Political_Schandal_desc:0 "Due to recent discoveries by the German Commission it's time to get to the bottom of these rumours."
+BEL_Investigate_Political_Schandal_desc:0 "독일 위원회에 의한 최근의 발견으로 인해, 이제 이 소문들의 진상을 규명할 때입니다."
 BEL_Abolish_Flemish_Council:0 "플랑드르 의회 폐지"
-BEL_Abolish_Flemish_Council_desc:0 "The Flemish Council is a relic from a time when the Flemish had a say in matters. This has to be stomped out and replaced by our own cabinet of trusted advisers."
+BEL_Abolish_Flemish_Council_desc:0 "플랑드르 의회는 플랑드르가 문제에 대해 발언권을 가졌던 시절의 유물입니다. 이것은 없어져야 하고 우리의 믿을 만한 조언자들로 구성된 내각에 의해 대체되어야 합니다."
 BEL_Strong_Royal_Power:0 "강한 국왕의 권력"
-BEL_Strong_Royal_Power_desc:0 "Adalbert rules supreme and all who question his power shall be punished!"
+BEL_Strong_Royal_Power_desc:0 "아달베르트 왕의 통치는 최고이며 그의 권력에 의문을 제기하는 모든 자는 처벌 받을 것입니다!"
 BEL_Reintroduce_Census_Voting:0 "선거 시스템 개혁"
-BEL_Reintroduce_Census_Voting_desc:0 "By overhauling our voting system, we will be able to have even more control over the political situation in the country at the cost of increasing unrest."
+BEL_Reintroduce_Census_Voting_desc:0 "우리의 투표 시스템을 전면 개편함으로써 우리는 정치 불안에 대한 대가로 정치 상황을 더욱 강력하게 통제할 수 있게 될 것입니다."
 BEL_Expand_Feldgendarmerie:0 "헌병대 확장"
-BEL_Expand_Feldgendarmerie_desc:0 "The Feldgendarmerie is our special German police department and is our most loyal source of support. By further recruiting Germans into this force, we can more effectively crack down on resistance."
-BEL_Increase_Suppression:0 "Increase Suppression"
-BEL_Increase_Suppression_desc:0 "The best way of reducing unrest is by spewing propaganda as much as possible. By founding the NIR we will have complete control over radio and television and as such the decision what our people watch and listen to."
+BEL_Expand_Feldgendarmerie_desc:0 "야전 헌병대는 우리의 특별한 독일 경찰 부서이며 가장 충성스러운 지원자입니다. 독일군을 이 병력에 추가로 모집함으로써 우리는 저항에 대해 보다 효과적으로 단속 할 수 있습니다."
+BEL_Increase_Suppression:0 "진압 증가"
+BEL_Increase_Suppression_desc:0 "불안을 줄이는 가장 좋은 방법은 선전을 가능한 한 많이 하는 것입니다. NIR을 설립함으로써 우리는 라디오와 텔레비전에 대한 완전한 통제권을 갖게 될 것이며, 우리 국민이 보고 듣는 것을 결정할 것입니다."
 BEL_Ban_Cooperatives:0 "협동조합 금지"
-BEL_Ban_Cooperatives_desc:0 "To prevent any more rebellions we have to stomp out any Syndicalist organisation in our country starting with the Cooperatives."
+BEL_Ban_Cooperatives_desc:0 "더 이상의 반란을 막기 위해서는 협력체로 시작하는 우리나라의 모든 생디칼리스트 조직을 없애야 합니다."
 BEL_Enforce_German_Education:0 "독일식 교육 강요"
-BEL_Enforce_German_Education_desc:0 "By further pushing German education from a young age, we are able to control our populace."
+BEL_Enforce_German_Education_desc:0 "어린 나이때부터 독일식 교육을 더욱 강화함으로써 우리는 우리 국민들을 통제할 수 있습니다."
 BEL_Join_The_Kaiser_Research:0 "카이저 빌헬름 학회에 가입"
-BEL_Join_The_Kaiser_Research_desc:0 "The scientific glory days of Belgium were over after the occupation so we must rely on German research to defend ourselves from the French."
-BEL_Soldiers_To_Protect_The_Empire:0 "Soldiers to Protect the German Empire"
-BEL_Soldiers_To_Protect_The_Empire_desc:0 "To protect the German Empire we need a strong defensive army. Therefore we will press more of our population into service."
+BEL_Join_The_Kaiser_Research_desc:0 "벨기에의 과학적 영광의 날들은 점령 후에 끝이 났습니다. 그래서 우리는 프랑스로부터 우리 자신을 지키기 위해 독일의 연구에 의존해야만 합니다."
+BEL_Soldiers_To_Protect_The_Empire:0 "독일 제국을 지키기 위한 병사들"
+BEL_Soldiers_To_Protect_The_Empire_desc:0 "독일 제국을 보호하기 위해 우리는 강력한 방어군이 필요합니다. 따라서 우리는 더 많은 인구를 입대하도록 인도할 것입니다."
 BEL_Expand_The_Westwall:0 "서부방벽 확장"
-BEL_Expand_The_Westwall_desc:0 "The Westwall is our only defence against the Syndicalist menace and must be protected at all costs."
-BEL_Guidance_By_The_Flemish_Council:0 "Guidance by the Flemish Council"
-BEL_Guidance_By_The_Flemish_Council_desc:0 "By allowing the Flemish Council to take care of this years budget evaluation we can guarantee their support and potentially convince the people that we aren't just evil oppressors."
+BEL_Expand_The_Westwall_desc:0 "서부방벽은 생디칼리스트의 위협에 맞서는 우리의 유일한 방어책이며 어떤 일이 있어도 반드시 보호되어야만 합니다."
+BEL_Guidance_By_The_Flemish_Council:0 "플랑드르 의회의 지침"
+BEL_Guidance_By_The_Flemish_Council_desc:0 "플랑드르 의회가 수년 간의 예산 평가를 처리하도록 허용함으로써 우리는 그들의 지지를 보장할 수 있고 우리가 단지 사악한 압제자가 아니라는 것을 잠재적으로 설득할 수 있습니다."
 BEL_Give_Power_To_Parliament:0 "의회에 권력 부여"
-BEL_Give_Power_To_Parliament_desc:0 "We will start moving to a more open type of government, allowing opposition parties to take place in the debates and by slowly recognising other parties than those directly supportive of the king."
-BEL_Combat_German_Favoritism:0 "Combat German Favouritism"
-BEL_Combat_German_Favoritism_desc:0 "A large problem in our nation is that German citizens are favoured by the Government and many high-ranking positions are solely reserved for citizens with the German nationality. By granting our judicial system more power to combat these we can further unify the country."
-BEL_Reform_The_Provincial_System:0 "Reform the Provincial System"
-BEL_Reform_The_Provincial_System_desc:0 "To better understand the needs of the people, the Government has decided to reform the provincial system. By splitting Flanders and Wallonia in 9 provinces and splitting the economic responsibilities in 3 : Flanders, Wallonia and Brussels, we will be able to further adapt our nation to local requirements."
-BEL_Create_Free_Education:0 "Create Free Education"
-BEL_Create_Free_Education_desc:0 "The best way to hit the Catholic Party is by diminishing their power in the Education department. By massively funding State and City education, we are able to provide education to an even broader public and reduce our reliance on Catholic Education."
-BEL_State_Funded_Cooperatives:0 "State Funded Cooperatives"
-BEL_State_Funded_Cooperatives_desc:0 "To combat the pressure of the Syndicalists in France, the Government has proposed to reintroduce the Cooperatives. They are a more temperate version of unions and are mainly responsible for ensuring that all workers have a place to stay and food to eat."
+BEL_Give_Power_To_Parliament_desc:0 "우리는 좀 더 개방적인 형태의 정부로 옮겨 가서, 야당들이 토론에서 일어나도록 하고, 왕을 직접 지지하는 사람들보다 다른 당들을 천천히 인식하도록 할 것입니다."
+BEL_Combat_German_Favoritism:0 "독일 애국주의 투쟁"
+BEL_Combat_German_Favoritism_desc:0 "우리나라의 큰 문제는 독일 시민들이 정부에 의해 선호되고 많은 고위 직책이 독일 국적을 가진 시민들에게만 확보되어 있다는 것입니다. 우리 사법 제도에 더 많은 권한을 부여함으로써 우리는 이 나라를 더욱 통합시킬 수 있습니다."
+BEL_Reform_The_Provincial_System:0 "주 정부 시스템 개혁"
+BEL_Reform_The_Provincial_System_desc:0 "국민들의 요구를 더 잘 이해하기 위해 정부는 지방 제도를 개혁하기로 결정했습니다. 9개 지방에서 플랑드르와 왈로니아를 나누고 경제적 책임을 세가지로 나눔으로써 우리는 우리나라를 지방의 요구에 더 잘 적응시킬 수 있을 것입니다."
+BEL_Create_Free_Education:0 "무료 교육 창설"
+BEL_Create_Free_Education_desc:0 "카톨릭 정당을 공격하는 가장 좋은 방법은 교육부에서의 권력을 축소하는 것입니다. 주 및 시 교육에 막대한 자금을 지원함으로써 우리는 더 많은 대중에게 교육을 제공하고 카톨릭 교육에 대한 의존도를 줄일 수 있습니다."
+BEL_State_Funded_Cooperatives:0 "주립 기금 협동 조합"
+BEL_State_Funded_Cooperatives_desc:0 "프랑스 생디칼리스트들의 압박에 대처하기 위해 정부는 협동 조합을 재 도입 할 것을 제안했습니다. 그들은 보다 온화한 노동 조합이며, 모든 근로자가 머물고 음식을 먹을 수 있는 곳을 확보할 책임이 있습니다."
 BEL_Catholic_Education_Reforms:0 "가톨릭 교육 개혁"
-BEL_Catholic_Education_Reforms_desc:0 "Catholic Education has always been one of the most important and most powerful tools of the Catholics to express their power. Most of the Flemish population has been educated by the Christian Schools and a large reform proposed by the Catholic Party is planning to improve the general level of our education."
+BEL_Catholic_Education_Reforms_desc:0 "카톨릭 교육은 항상 자신의 힘을 표현하는 가장 중요하고 가장 강력한 도구 중 하나입니다. 플랑드르 인구의 대부분은 기독교 학교에 의해 교육 받았으며 카톨릭 정당이 제안한 대규모 개혁은 우리 교육의 전반적인 수준을 향상시키는 계획입니다."
 BEL_Caritas:0 "카리타스"
-BEL_Caritas_desc:0 "Caritas is a system originally created by the Catholic Church to provide help for the needy. Due to increased power of the Catholic party they have been able to expand their organisation and have expanded it throughout both Flanders and Wallonia."
-BEL_Trans_Regional_Associations:0 "Trans Regional Associations"
-BEL_Trans_Regional_Associations_desc:0 "A large conflict within the army consists of the many languages used by the soldiers and the fact that officers can only be German citizens. By opening a debate concerning this matter, we will be able to solve many of these issues."
-BEL_Rally_Behind_the_Lion:0 "Schild en Vriend"
-BEL_Rally_Behind_the_Lion_desc:0 "Our best way of Flemish support is to ensure that their hatred for the French is greater than their hatred for us. By reminding them of the famous saying "Schild en Vriend", used during the Flemish rebellion to identify the French, we can rally the Flemish movements behind our own banner."
+BEL_Caritas_desc:0 "카리타스는 원래 가난한 사람들을 돕기 위해 가톨릭 교회가 만든 시스템입니다. 카톨릭 정권의 권력이 커짐에 따라 그들은 조직을 확대할 수 있었으며 플랑드르와 왈로니아 전역에서 조직을 확대할 수 있었습니다."
+BEL_Trans_Regional_Associations:0 "트랜스 지방 협회"
+BEL_Trans_Regional_Associations_desc:0 "군대 내에서의 가장 큰 갈등은 군인들이 사용하는 많은 언어와 장교들이 독일인일 수 밖에 없다는 사실입니다. 이 문제에 관한 토론을 시작함으로써, 우리는 이러한 문제들 중 많은 것들을 해결할 수 있을 것입니다."
+BEL_Rally_Behind_the_Lion:0 "방패와 친구"
+BEL_Rally_Behind_the_Lion_desc:0 "플랑드르를 지원하는 가장 좋은 방법은 프랑스에 대한 그들의 증오가 우리에 대한 증오보다 더 크다는 것을 확실히 하는 것입니다. 플랑드르 반란 중에 프랑스인을 식별하기 위해 사용된 유명한 속담 "방패와 친구 (Schild en Vriend)"를 상기시킴으로써 우리는 플랑드르의 움직임을 우리의 깃발 아래 모을 수 있습니다."
 BEL_Stop_the_Flamenpolitik:0 "플라망 정책 중지"
-BEL_Stop_the_Flamenpolitik_desc:0 "The Flamenpolitik was originally founded by the German occupants during the Weltkrieg and dictated a policy of causing internal divide by favouring Flemish over Walloons. While it's original intention of causing internal divide was succesfull, this has brought with it a far less stable nation and a strong aversion by the Walloon population towards the German regime."
+BEL_Stop_the_Flamenpolitik_desc:0 "플라망 정책은 원래 세계대전 기간 동안 독일인 거주자들에 의해 설립되었고 왈로니아위의 플랑드르를 밀어냄으로써 내부 분열을 유발하는 정책을 지시했습니다. 내부 분열을 유발하려는 원래 의도는 성공적이었지만, 이것은 독일을 훨씬 덜 안정된 국가로 만들었고 왈로니아 인구의 독일 체제에 대한 강한 혐오감을 가져왔습니다."
 BEL_Restore_the_law_Lejeune:0 "르준 법 복구"
-BEL_Restore_the_law_Lejeune_desc:0 "After the German take-over in 1914, many of the civil liberties that were gained by the Belgian population during the 19th Century were reverted. Control over the press, judicial system and excecutive branch were all redirected to a centralised German regime which has been continued by Adalbert I. By slowly returning these rights back to the people and reestablish a truly democratic system, we hope to quel the Belgian nationalism and loyalty to the King in Exile : Albert I."
+BEL_Restore_the_law_Lejeune_desc:0 "1914년 독일의 정권 이양 이후, 19세기 벨기에 사람들이 얻었던 많은 자유들이 되돌려 졌습니다. 아달베르트 1세에 의해 계속되어 왔던 언론, 사법 제도, 그리고 집행부에 대한 통제는 모두 중앙 집권 독일 정권으로 모두 이양되었습니다. 이 권리를 서서히 국민에게 돌려주고 진정한 민주주의 체제를 재건함으로써 벨기에 민족주의와 망명한 왕 알버트 1세에 대한 충성을 해야 합니다."
 BEL_Rijkswacht:0 "헌병대 설립"
 BEL_Rijkswacht_desc:0 "Our Crime Figthing network is an absolute mess with the Vlaams Wacht, Feldgendarmerie and normal police forces all handle specific parts of the task leading to great unnecessary expenditure and distrust between the different branches. A new proposal by a coalition of parties in the parliament has now offered the creation of 1 centralised force, the Rijskwacht to take over all other branches except the secret service."
 BEL_BWP_Victory:0 "BWP Victory"
