--- a/Kaiserreich Korean Translation/localisation/KR_Baltic_Duchy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Baltic_Duchy_l_english.yml
@@ -378,72 +378,72 @@ balticduchy.198.c:0 "Offer them to join the Reichspakt."
 balticduchy.198.e:0 "We have no interest in this region."
 
 balticduchy.199.t:0 "독일이 괴뢰국이 되기를 요구하다"
-balticduchy.199.d:0 "Kaiser is outrageous about our independence. He demands from us to officially admit his as our overlord and master."
-balticduchy.199.a:0 "We have no choice."
-balticduchy.199.b:0 "No more Germans will demand anything from us!"
+balticduchy.199.d:0 "황제는 우리의 독립에 대하여 분노한 상태이다. 그는 우리가 공식적으로 그를 우리의 군주이자 주인으로 인정하기를 요구한다."
+balticduchy.199.a:0 "더 이상의 방법이 없다."
+balticduchy.199.b:0 "독일인이 우리에게 더 이상 요구하지 못 하게 하라!"
 
 balticduchy.200.t:0 "독일이 괴뢰국이 되기를 요구하다"
-balticduchy.200.d:0 "Kaiser is outrageous about our independence. He demands from us to officially admit his as our overlord and master."
-balticduchy.200.a:0 "We have no choice."
-balticduchy.200.b:0 "No more Germans will demand anything from us!"
+balticduchy.200.d:0 "황제는 우리의 독립에 대하여 분노한 상태이다. 그는 우리가 공식적으로 그를 우리의 군주이자 주인으로 인정하기를 요구한다."
+balticduchy.200.a:0 "더 이상의 방법이 없다."
+balticduchy.200.b:0 "독일인이 우리에게 더 이상 요구하지 못 하게 하라!"
 
 balticduchy.201.t:0 "독일이 동맹국이 되기를 요구하다"
-balticduchy.201.d:0 "With the end of Baltic Duchy, Germany have lost it's control over the region. Instead of fighting with us, Kaiser offer us to be his ally."
-balticduchy.201.a:0 "Fine deal."
-balticduchy.201.b:0 "No more deal with Germans!"
+balticduchy.201.d:0 "발트 공국이 끝남으로써, 독일은 이 지역을 다스릴 힘을 잃었다. 황제는 우리에게 싸우기 보다 자신의 동맹이 될 것을 제안했다."
+balticduchy.201.a:0 "좋은 협상이군."
+balticduchy.201.b:0 "독일인과의 협상은 없다!"
 
 balticduchy.202.t:0 "독일이 동맹국이 되기를 요구하다"
-balticduchy.202.d:0 "With the end of Baltic Duchy, Germany have lost it's control over the region. Instead of fighting with us, Kaiser offer us to be his ally."
-balticduchy.202.a:0 "Fine deal."
-balticduchy.202.b:0 "No more deal with Germans!"
+balticduchy.202.d:0 "발트 공국이 끝남으로써, 독일은 이 지역을 다스릴 힘을 잃었다. 황제는 우리에게 싸우기 보다 자신의 동맹이 될 것을 제안했다."
+balticduchy.202.a:0 "좋은 협상이군."
+balticduchy.202.b:0 "독일인과의 협상은 없다!"
 
 balticduchy.203.t:0 "라트비아의 저항"
-balticduchy.203.d:0 "Latvia has refused to admit our leadership. What shall we do?"
-balticduchy.203.a:0 "We have no other option but war"
-balticduchy.203.b:0 "Leave them be!"
+balticduchy.203.d:0 "라트비아는 우리의 지배를 받아들이기를 거절했다. 우리는 무엇을 해야하는가?"
+balticduchy.203.a:0 "전쟁 외에 다른 방안은 없다"
+balticduchy.203.b:0 "내버려 둬!"
 
 balticduchy.204.t:0 "에스토니아의 저항"
-balticduchy.204.d:0 "Estonia has refused to admit our leadership. What shall we do?"
-balticduchy.204.a:0 "We have no other option but war"
-balticduchy.204.b:0 "Leave them be!"
+balticduchy.204.d:0 "에스토니아는 우리의 지배를 받아들이기를 거절했다. 우리는 무엇을 해야하는가?"
+balticduchy.204.a:0 "전쟁 외에 다른 방안은 없다"
+balticduchy.204.b:0 "내버려 둬!"
 
-balticduchy.205.t:0 "Latvia don't want to be part of our alliance"
-balticduchy.205.d:0 "Latvia has refused our deal to join the Reichspakt. What shall we do?"
-balticduchy.205.a:0 "We have no other option but war"
-balticduchy.205.b:0 "Leave them be!"
+balticduchy.205.t:0 "라트비아는 우리의 동맹국이 되길 원하지 않는다"
+balticduchy.205.d:0 "라트비아는 Reichspakt에 가입하라는 제안을 거절했다. 무엇을 해야하는가?"
+balticduchy.205.a:0 "전쟁 외에 다른 방안은 없다"
+balticduchy.205.b:0 "내버려 둬!"
 
-balticduchy.206.t:0 "Estonia don't want to be part of our alliance"
-balticduchy.206.d:0 "Estonia has refused our deal to join the Reichspakt. What shall we do?"
-balticduchy.206.a:0 "We have no other option but war"
-balticduchy.206.b:0 "Leave them be!"
+balticduchy.206.t:0 "에스토니아는 우리의 동맹국이 되길 원하지 않는다"
+balticduchy.206.d:0 "에스토니아는 Reichspakt에 가입하라는 제안을 거절했다. 무엇을 해야하는가?"
+balticduchy.206.a:0 "전쟁 외에 다른 방안은 없다"
+balticduchy.206.b:0 "내버려 둬!"
 
-balticduchy.207.t:0 "Estonia is weak"
-balticduchy.207.d:0 "Newborn Estonia is threatened by Germany. It's a fine opportunity for us to influence their government. However, we don't exactly now how Germans will react on this."
-balticduchy.207.a:0 "Use SOP to install a loyal government"
-balticduchy.207.b:0 "Use SOP to force them to join our alliance"
-balticduchy.207.c:0 "This is too risky"
+balticduchy.207.t:0 "에스토니아는 약소국이다"
+balticduchy.207.d:0 "신생 에스토니아는 독일에게 위협 받고있다. 에스토니아 정부에 영향력을 행사할 수 있는 좋은 기회이지만, 독일이 어떻게 반응할 것인지 확신할 수 없다."
+balticduchy.207.a:0 "SOP를 이용해서 충성스러운 정부를 수립하자"
+balticduchy.207.b:0 "SOP를 이용해서 우리 동맹에 들어오길 강요하자."
+balticduchy.207.c:0 "이건 너무 위험해"
 
-balticduchy.208.t:0 "Russians are behind Estonia"
-balticduchy.208.d:0 "Russia has announced their interest in Estonia. To continue fighting with Estonia means Russia may join them, and then war will becomes truly devastating to our economy."
-balticduchy.208.a:0 "Give up"
-balticduchy.208.b:0 "Give up and embargo Russia"
-balticduchy.208.c:0 "They want another Brest-Litovsk Treaty!"
+balticduchy.208.t:0 "러시아가 에스토니아의 배후에 있다"
+balticduchy.208.d:0 "러시아는 에스토니아에 관심이 있음을 공표했다.에스토니아와 전쟁을 지속하는 것은 러시아가 참전한다는 것을 의미하고 전쟁은 우리 경제에 진정한 재앙으로 다가올 것이다."
+balticduchy.208.a:0 "포기하자"
+balticduchy.208.b:0 "포기하고 러시아와 무역을 금지한다"
+balticduchy.208.c:0 "저들은 또 다른 브레스트-리토브스크 조약을 원하는 군!"
 
 balticduchy.209.t:0 "발트 전쟁 - 부분적 성공"
-balticduchy.209.d:0 "We have managed to bring order into Latvia, but Estonia is now lost for us. We can restore Baltic Duchy or liberate a loyal Latvia."
-balticduchy.209.a:0 "We will return the lands of Estonia someday. Restore the Duchy"
-balticduchy.209.b:0 "Restore a loyal Latvia"
-balticduchy.209.c:0 "Total occupation!"
+balticduchy.209.d:0 "우리는 라트비아를 우리 지배 아래 뒀지만, 에스토니아는 우리의 손을 떠났다. 우리는 발트 공국을 복구하거나 충성스러운 라트비아로 독립시킬 수 있다."
+balticduchy.209.a:0 "언젠가는 에스토니아의 땅을 수복해야한다. 공국을 복구하라"
+balticduchy.209.b:0 "충성스러운 라트비아로 독립시킨다."
+balticduchy.209.c:0 "완전히 점령하라!"
 
 balticduchy.210.t:0 "발트 전쟁 - 완전한 성공"
-balticduchy.210.d:0 "We have managed to bring order into Latvia and Estonia. The region is now pacified. We can restore Baltic Duchy into it's former borders, or liberate a loyal Latvia and Estonia."
-balticduchy.210.a:0 "Say the Duke he is returns to Riga."
-balticduchy.210.b:0 "Liberate a loyal Baltic countries"
-balticduchy.210.c:0 "Total occupation!"
+balticduchy.210.d:0 "우리는 라트비아와 에스토니아를 지배 아래 뒀다. 이 지역은 이제 안정화되었다. 우리는 예전 국경으로 발트 공국을 복구하거나 충성스러운 라트비아와 에스토니아로 독립시킬 수 있다."
+balticduchy.210.a:0 "공작에게 리가로 돌아가라고 전하라."
+balticduchy.210.b:0 "충성스러운 라트비아와 에스토니아로 독립시킨다."
+balticduchy.210.c:0 "완전히 점령하라!"
 
 balticduchy.211.t:0 "반란이 끝나다"
-balticduchy.211.d:0 "With Germans are no more in power, rebellion has lost it's sense. Brave militiamen returns to their regural work."
-balticduchy.211.a:0 "No more German yoke!"
+balticduchy.211.d:0 "독일인들이 더 이상 힘을 못 쓰면서 반란은 목적을 잃어가고 있다. 용감한 민병대는 일상생활로 돌아간다."
+balticduchy.211.a:0 "더 이상 독일인과의 연대는 없다!"
 
 ### Parties ###
 
@@ -481,40 +481,40 @@ BAT_RUS_paternal_autocrat_party_long:0 "발트 해방 연합 (중도)"
 ### Focuses ###
 
 BAT_Germanization:0 "독일화"
-BAT_Germanization_desc:0 "Almost two decades have passed since we achieved our status as a German protectorate. These decades have turned our nation into a German-dominated state, and we must respect their wishes. The Kaiser calls for Germanisation, and we shall follow suit. Drang Nach Osten!"
+BAT_Germanization_desc:0 "독일의 보호국으로서 거의 20년이 지났다. 이 수십년간 우리의 조국은 독일의 종속국이 되었고 우리는 그들의 소망을 반드시 존중해야한다. 황제께서 독일화를 말씀하셨고, 우리는 그 뜻에 따를 것이다. Drang Nach Osten(동부로의 전진)!"
 
 BAT_Emancipation:0 "해방"
-BAT_Emancipation_desc:0 "Almost two decades have passed since we achieved our status as a German protectorate. The Germans dominate our industry, our politics, and our military. We may be Germans too, but the Vaterland is growing weak, it is perhaps our chance to break those ties."
+BAT_Emancipation_desc:0 "독일의 보호국으로서 거의 20년이 지났다. 독일인들은 우리의 산업, 우리의 정치, 우리의 군대를 지배하고 있다. 우리도 그들의 지배에 있겠지만, 독일은 갈 수록 약해지고 있고 이것은 우리가 그들과의 연결을 끊을 수 있는 기회가 될 것이다."
 
 BAT_Ger_Kurland1:0 "쿠를란트 식민화"
-BAT_Ger_Kurland1_desc:0 "Kurland, or Kursas as the locals call it, shall be the first step towards the full Germanisation of our Duchy. It will be easy to turn this region into a German-dominated one, despite some native resistance."
+BAT_Ger_Kurland1_desc:0 "쿠를란트, 쿠르사르라고 지역민들은 부른다, 우리 공국의 완전한 독일화의 첫 단계가 될 것이다. 약간의 저항이 있더라도, 독일 종속화가 되기에는 쉬운 지역이 될 것이다."
 
 BAT_Ger_Livland1:0 "리블란트 식민화"
-BAT_Ger_Livland1_desc:0 "Livland, referred to by the locals as Latgale, is the heart of our very Duchy, and yet the countryside of this region is still mostly Latvian. Hopefully, not for long."
+BAT_Ger_Livland1_desc:0 "리블란트, 지역민들이 라트게일이라고 선호하지만, 우리 공국의 심장이고 이 지역의 시골은 여전히 대부분 라트비아인들이다. 다행히도, 그리 오래 걸리지는 않을 것이다."
 
 BAT_Ger_Estland1:0 "에스틀란트 식민화"
-BAT_Ger_Estland1_desc:0 "Estland, or Estonia according to the locals, is the final step towards the full Germanisation of our Duchy. We already have experience in strategic immigrant settling and fighting local language usage, so this will be an easy task."
+BAT_Ger_Estland1_desc:0 "에스틀란트, 또는 지역민들에게 에스토니아로 불리는, 우리 공국의 완전한 독일화를 향한 마지막 단계이다. 우리는 이미 전략적인 이주 정착 전략과 지역 언어 사용과 싸우는 경험을 갖고 있다. 그래서 아주 쉬운 일이 될 것이다."
 
 BAT_Ger_Kurland2:0 "독일령 쿠를란트"
-BAT_Ger_Kurland2_desc:0 "The Germanisation project has yielded exactly the results we needed. The percentage of Germans in Kurland is growing every day, and despite native resistance, the ideal of Drang nach Osten grows stronger every day."
+BAT_Ger_Kurland2_desc:0 "독일화 프로젝트는 우리가 원하는 방향으로 진행중이다.쿠를란트의 지역민들의 저항에도 불구하고 독일인 비중은 매일 늘어나고 있고, 동부로의 전진으로라는 그 정신은 매일 더 강해지고 있다."
 
 BAT_Ger_Livland2:0 "독일령 리블란트"
-BAT_Ger_Livland2_desc:0 "The Germanisation project has yielded exactly the results we needed. The percentage of Germans in Livland is growing every day, and despite native resistance, the ideal of Drang nach Osten grows stronger every day."
+BAT_Ger_Livland2_desc:0 독일화 프로젝트는 우리가 원하는 방향으로 진행중이다.리블란트의 지역민들의 저항에도 불구하고 독일인 비중은 매일 늘어나고 있고, 동부로의 전진으로라는 그 정신은 매일 더 강해지고 있다."
 
 BAT_Ger_Estland2:0 "독일령 에스틀란트"
-BAT_Ger_Estland2_desc:0 "The Germanisation project has yielded exactly the results we needed. The percentage of Germans in Estland is growing every day, and despite native resistance, the ideal of Drang nach Osten grows stronger every day."
+BAT_Ger_Estland2_desc:0 독일화 프로젝트는 우리가 원하는 방향으로 진행중이다.에스틀란트의 지역민들의 저항에도 불구하고 독일인 비중은 매일 늘어나고 있고, 동부로의 전진으로라는 그 정신은 매일 더 강해지고 있다."
 
-BAT_Ger_Baltic:0 "독일령 발트국"
-BAT_Ger_Baltic_desc:0 "The process of Germanisation has been successful. The Baltic Germans are now the dominant nation in population as well as in politics. We are finally eligible to apply to become an Imperial State, if that's is what we want, of course."
+BAT_Ger_Baltic_desc:0 "독일령 발트국"
+BAT_Ger_Baltic_desc:0 "독일화 과정은 완성되어 가고있다. 독일령 발트국은 이제 인구로 지배적이 되었고 정치적으로도 마찬가지이다. 우리는 마침내 제국에 편입되기 위한 준비를 마쳤다. 물론 이건 우리가 원했던 것이다."
 
 BAT_Ger_Integration:0 "합병"
-BAT_Ger_Integration_desc:0 "The Vaterland calls! We are Germans, and our Duchy shall become the 29th Imperial State! A glorious future awaits us under the full protection and oversight of the German Vaterland."
+BAT_Ger_Integration_desc:0 "독일이 부른다! 우리는 독일인이고 공국은 제국의 29번째 주가 될 것이다. 빛나는 미래가 아버지 완전한 보호와 아버지 독일의 실수 아래에서 기다리고 있다."
 
 BAT_Ger_Puppet:0 "현상 유지"
-BAT_Ger_Puppet_desc:0 "Reuniting with the Vaterland is important, but not the top priority. While we may be Germans, we are Baltic Germans, and we must receive special treatment. Reunification can wait, we must deal with local matters first."
+BAT_Ger_Puppet_desc:0 "독일와 재결합 하는 것은 중요하지만, 최우선 사항은 아니다. 우리가 독일이 된다는 것은 발트의 독일인이 된다는 것이고 우리는 특별한 대우를 받을 것이다. 재결합은 기다릴 수 있지만, 먼저 지역적인 문제를 해결해야한다."
 
 BAT_Ger_Indep:0 "독립"
-BAT_Ger_Indep_desc:0 "The valley between Vaterland Germans and Baltic Germans will never, and we do mean never, be treaded over by the Empire. We, the Germans of Livland, Kurland and Estland, must cease all dealings with the mainland, and declare independence!"
+BAT_Ger_Indep_desc:0 "아버지 독일과 발트 독일인들의 사이에서 절대, 절대로 제국이 마음대로 하게 해서는 안된다. 리블란트, 쿠를란트, 에스틀란트의 우리 독일인들은 본국과의 모든 거래를 중단하고 독립을 선언한다!"
 
 BAT_Ger_Autonomy1:0 "독일인 자치권"
 BAT_Ger_Autonomy1_desc:0 "It is time for us to reform. The conservatives within the Baltic Landtag want to turn the nation into a parliamentary monarchy and abandon the nigh-absolutist practices of Adolf Friedrich I. Should we listen?"
