--- a/Kaiserreich Korean Translation/localisation/KR_Baltic_Duchy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Baltic_Duchy_l_english.yml
@@ -408,12 +408,12 @@ balticduchy.204.a:0 "전쟁 외에 다른 방안은 없다"
 balticduchy.204.b:0 "내버려 둬!"
 
 balticduchy.205.t:0 "라트비아는 우리의 동맹국이 되길 원하지 않는다"
-balticduchy.205.d:0 "라트비아는 Reichspakt에 가입하라는 제안을 거절했다. 무엇을 해야하는가?"
+balticduchy.205.d:0 "라트비아는 제국 협정에 가입하라는 제안을 거절했다. 무엇을 해야하는가?"
 balticduchy.205.a:0 "전쟁 외에 다른 방안은 없다"
 balticduchy.205.b:0 "내버려 둬!"
 
 balticduchy.206.t:0 "에스토니아는 우리의 동맹국이 되길 원하지 않는다"
-balticduchy.206.d:0 "에스토니아는 Reichspakt에 가입하라는 제안을 거절했다. 무엇을 해야하는가?"
+balticduchy.206.d:0 "에스토니아는 제국 에 가입하라는 제안을 거절했다. 무엇을 해야하는가?"
 balticduchy.206.a:0 "전쟁 외에 다른 방안은 없다"
 balticduchy.206.b:0 "내버려 둬!"
 
